# uk-bank-statement-anonymiser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/bank_statement_anonymiser/: __init__.py  _shared.py  always_anonymise_system.toml  anonymise.py  never_anonymise_system.toml
tests/: conftest.py  test_public_api.py
