[project]
name = "uk-bank-statement-anonymiser"
version = "0.1.5"
description = "Anonymise UK bank statement PDFs by scrambling personal data while preserving document structure."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jason Farrar", email = "farrar.jason1@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "bank-statement", "pdf", "anonymise", "anonymize",
    "privacy", "gdpr", "pikepdf", "uk", "hsbc", "natwest", "tsb",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pikepdf>=10.3.0",
]

[project.urls]
Homepage = "https://github.com/boscorat/uk-bank-statement-anonymiser"
Repository = "https://github.com/boscorat/uk-bank-statement-anonymiser"
Issues = "https://github.com/boscorat/uk-bank-statement-anonymiser/issues"

[build-system]
requires = ["uv_build>=0.9.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bank_statement_anonymiser"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
minversion = "7.0"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: unit tests with isolated components",
    "integration: integration tests with real PDF operations",
    "slow: slow tests that may take time to run",
]

[tool.ruff]
line-length = 140
target-version = "py314"
lint.unfixable = ["F401"]
